Assignment -11 and 12 | Spring Boot REST API: Category & Product CRUD with Full Test Coverage (#16)
* RD | assignment 11 | Initial project.

* RD | assignment 11 | initial commit.

* RD | assignment 11 | initial commit 2.

* RD | assignment 11 | addded test cases for controllers,services and dao.

* RD | assignment 11 | fixed CategoryControllerTest

* RD | assignment 11 | fixed endpoint response and added update endpoints

* RD | assignment 11 | added Java Docs.

* RD | assignment 11 | added Dockerfile docker-compose.yml

* RD | assignment 11 | updated Dockerfile docker-compose.yml

* RD | assignment 11 | implemented hibernation and JpaRepository pattern.

* RD | assignment 11 | updated Dockerfile.

* RD | assignment 11 | added github-actions-demo.yml file.

* RD | assignment 11 | updated .gitignore , added gradlew and gradlew.bat.

* RD | assignment 11 | updated .gitignore , added gradle-wrapper.jar

* RD | assignment 11 | updated gradle.properties

* RD | assignment 11 | updated build.gradle

* RD | assignment 11 | updated endpoints.

* RD | assignment 11 | fixed testCases for controllers.

* RD | assignment 11 | fixed testCases for controllers.

* RD | assignment 11 | refactored Repository.